# BioPulse-Esp32

./: .gitignore  README.md
peristaltic_pump/: CMakeLists.txt
peristaltic_pump/components/mosfet/: CMakeLists.txt
peristaltic_pump/components/mosfet/include/: mosfet.h  mosfet_manager.h
peristaltic_pump/components/mosfet/src/: mosfet.c  mosfet_manager.c
peristaltic_pump/main/: main.c
ph_sensor/: CMakeLists.txt  sdkconfig  sdkconfig.old
ph_sensor/components/ph/: CMakeLists.txt
ph_sensor/components/ph/include/: ph_manager.h
ph_sensor/components/ph/src/: ph_manager.c
ph_sensor/main/: CMakeLists.txt  main.c
shared_components/bluetooth_component/: CMakeLists.txt
shared_components/bluetooth_component/include/: bluetooth_component.h
shared_components/bluetooth_component/src/: bluetooth_component.c
shared_components/cJSON/: CMakeLists.txt
shared_components/cJSON/include/: cJSON_Actuator_Manager.h  cJSON_Actuator_Model.h  cJSON_Manager.h  cJSON_Model.h  cJSON_Sensor_Manager.h  cJSON_Sensor_Model.h
shared_components/cJSON/src/: cJSON_Actuator_Manager.c  cJSON_Manager.c  cJSON_Sensor_Manager.c
shared_components/i2c/: CMakeLists.txt
shared_components/i2c/include/: i2c_interface.h
shared_components/i2c/src/: i2c_master.c
shared_components/i2c/test/mocks/: i2c_mock.h
shared_components/i2c_component/: CMakeLists.txt
shared_components/i2c_component/include/: i2c_component_master.h  i2c_component_slave.h
shared_components/i2c_component/src/: i2c_component_master.c  i2c_component_slave.c
shared_components/i2c_component/test/mocks/: i2c_mock.c
shared_components/mqtt_component/: CMakeLists.txt
shared_components/mqtt_component/include/: mqtt_component.h
shared_components/mqtt_component/src/: mqtt_component.c
shared_components/test/: CMakeLists.txt
shared_components/test/main/: CMakeLists.txt  unit_test.c
shared_components/wifi_component/: CMakeLists.txt  sdkconfig.ci
shared_components/wifi_component/include/: uri_handler.h  wifi_component.h
shared_components/wifi_component/src/: uri_handler.c  wifi_component.c
tds_sensor/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
tds_sensor/components/tds_hardware/: CMakeLists.txt
tds_sensor/components/tds_hardware/include/: tds.h
tds_sensor/components/tds_hardware/src/: tds.c
tds_sensor/main/: CMakeLists.txt  main.c
temperature_sensor/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
temperature_sensor/components/cJSON/: CMakeLists.txt
temperature_sensor/components/cJSON/src/: cJSON_Manager.c
temperature_sensor/components/ds18b20/: CMakeLists.txt
temperature_sensor/components/ds18b20/include/: ds18b20.h
temperature_sensor/components/ds18b20/src/: ds18b20.c
temperature_sensor/components/ds18b20/test/: CMakeLists.txt  ds18b20_test.c  unit_test.c
temperature_sensor/components/esp_idf_mocks/: CMakeLists.txt
temperature_sensor/components/esp_idf_mocks/mock/: mock_config.yaml
temperature_sensor/components/i2c/: CMakeLists.txt
temperature_sensor/components/i2c/include/: i2c_interface.h  i2c_master.h  i2c_slave.h
temperature_sensor/components/i2c/src/: i2c_master.c  i2c_slave.c
temperature_sensor/components/i2c/test/: CMakeLists.txt  i2c_slave_test.c
temperature_sensor/components/i2c/test/linux_target/: i2c_slave_test_linux.c
temperature_sensor/components/temperature/: CMakeLists.txt
temperature_sensor/components/temperature/include/: temperature.h
temperature_sensor/components/temperature/src/: temperature.c
temperature_sensor/main/: CMakeLists.txt  main.c
temperature_sensor/test/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
temperature_sensor/test/main/: CMakeLists.txt  temperature_tests_main.c  unit_test.c
